# ecotyper-py

./: .gitignore  README.md  concordance.py  main.py  pyproject.toml  shell.nix  to_anndata.py
.github/workflows/: python-app.yml
ecotyper/: fast_nmf.py  model.py  utils.py
tests/: test_sparse.py
